--- a/rust/signer/Cargo.toml
+++ b/rust/signer/Cargo.toml
@@ -3,6 +3,7 @@ name = "signer"
 version = "0.1.0"
 authors = ["debris <marek.kotewicz@gmail.com>"]
 build = "build.rs"
+edition = "2018"
 
 [dependencies]
 libc = "0.2"
