--- a/rust/signer/Cargo.toml
+++ b/rust/signer/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 libc = "0.2"
 rustc-serialize = "0.3"
+ethsign = "0.1"
 ethkey = { git = "https://github.com/paritytech/parity-ethereum" }
 ethstore = { git = "https://github.com/paritytech/parity-ethereum" }
 rlp = { version = "0.3.0", features = ["ethereum"] }
