--- a/rust/signer/Cargo.toml
+++ b/rust/signer/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 
 [dependencies]
 libc = "0.2"
-rustc-serialize = "0.3"
-ethsign = "0.1"
+base64 = "0.10.1"
+rustc-hex = "2.0.1"
+ethsign = { git = "https://github.com/maciejhirsz/ethsign", branch = "mh-libsecp256k1", default-features = false, features = ["secp256k1-rs"] }
 ethkey = { git = "https://github.com/paritytech/parity-ethereum" }
 ethstore = { git = "https://github.com/paritytech/parity-ethereum" }
 rlp = { version = "0.3.0", features = ["ethereum"] }
