--- a/rust/signer/Cargo.toml
+++ b/rust/signer/Cargo.toml
@@ -10,8 +10,6 @@ libc = "0.2"
 base64 = "0.10.1"
 rustc-hex = "2.0.1"
 ethsign = { git = "https://github.com/maciejhirsz/ethsign", branch = "mh-libsecp256k1", default-features = false, features = ["secp256k1-rs"] }
-ethkey = { git = "https://github.com/paritytech/parity-ethereum" }
-ethstore = { git = "https://github.com/paritytech/parity-ethereum" }
 rlp = { version = "0.3.0", features = ["ethereum"] }
 tiny-keccak = "1.4"
 blockies = "0.2"
@@ -19,6 +17,8 @@ parity-wordlist = "1.2.1"
 jni = { version = "0.10.2", default-features = false, optional = true }
 bip39 = { git = "https://github.com/maciejhirsz/bip39-rs", default-features = false } # This will land in offical 0.6, sometime...
 schnorrkel = "0.0.0"
+serde = "1.0"
+serde_json = "1.0"
 
 [lib]
 name = "signer"
