--- a/rust/signer/Cargo.toml
+++ b/rust/signer/Cargo.toml
@@ -16,6 +16,7 @@ rustc-hex = "2.0.1"
 schnorrkel = "0.0.0"
 serde = "1.0"
 serde_json = "1.0"
+sha2 = "0.8"
 tiny-bip39 = { version = "0.6", default-features = false }
 tiny-hderive = "0.1"
 tiny-keccak = "1.4"
